objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_CIF__c</fullName>
        <formula>Account.CIF_SFDC2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_HCF__c</fullName>
        <formula>If(ISPICKVAL(Account.Referral_Partner__c ,&quot;Yes&quot;), text( Account.Partner_TypeHCF__c) , &quot;Provider&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type HCF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>If(  Account.RecordType.Name  = &quot;Referral Partner&quot;, text( Account.Partner_TypeHCF__c) , &quot;Provider&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_to_f9list_id__c</fullName>
        <label>Add to Five9 List ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_ARMS_ID_SFDC2__c</fullName>
        <description>Need the ARMS ID available for Advisor Firms and Advisors so that user can reference the ID for reporting.</description>
        <label>Advisor ARMS ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Accounts__c</fullName>
        <description>Number of Accounts per Advisor</description>
        <label>Advisor Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advisor_Customers__c</fullName>
        <description>Number of Customers per Advisor</description>
        <label>Advisor Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advisor_ID__c</fullName>
        <description>ARMS Advisor&apos;s Identification Number</description>
        <externalId>true</externalId>
        <label>Advisor ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Id_SFDC2__c</fullName>
        <externalId>true</externalId>
        <label>Applicant Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bank_Card_Response_SFDC2__c</fullName>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>Bank Card Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Email_SFDC2__c</fullName>
        <description>Primary business email</description>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Phone_SFDC2__c</fullName>
        <description>Primary business phone</description>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CASESAFEID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CASESAFEID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF_SFDC2__c</fullName>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <externalId>true</externalId>
        <label>CIF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_SFDC2__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Business Contact</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Previous Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <label>old_Chapter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Field from Outlook - Company - referring to each Contact&apos;s Company name.</description>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Mobile_Number__c</fullName>
        <formula>Owner.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Name__c</fullName>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Phone_Number__c</fullName>
        <description>For ExactTarget field mapping of attributes.</description>
        <formula>Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_ID_2__c</fullName>
        <externalId>true</externalId>
        <label>Contact Person ID 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Broker/Dealer</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Direct Borrower</fullName>
                </value>
                <value>
                    <fullName>CRE Broker</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker</fullName>
                </value>
                <value>
                    <fullName>Property Manager</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Accountant/CPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <label>Contact Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Researched</fullName>
                </value>
                <value>
                    <fullName>Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Hibernate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Total_SFDC2__c</fullName>
        <description>Count of Contacts</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to sum or count the number of Contacts</inlineHelpText>
        <label>Contact Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                </value>
                <value>
                    <fullName>State Lottery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correspondent_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this box if your contact is only going to receive a correspondent ratesheet</inlineHelpText>
        <label>Correspondent Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Quality__c</fullName>
        <label>Customer Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Since_SFDC2__c</fullName>
        <formula>Account.Customer_Since_Person__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Death_SFDC2__c</fullName>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Registration__c</fullName>
        <inlineHelpText>Date of Registration of the Advisor</inlineHelpText>
        <label>Date of Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_Date_SFDC2__c</fullName>
        <description>Date of individual deceased</description>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_from_f9list_id__c</fullName>
        <label>Delete from Five9 List ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discretionary_Income_per_Month_SFDC2__c</fullName>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>Discretionary Income per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Cross_Sell_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a Contact should not be Cross-Sold any products</description>
        <inlineHelpText>Indicates a Contact should not be Cross-Sold any products</inlineHelpText>
        <label>Do Not Cross-Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_SFDC2__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Some College</fullName>
                </value>
                <value>
                    <fullName>Completed College</fullName>
                </value>
                <value>
                    <fullName>Graduate School</fullName>
                </value>
                <value>
                    <fullName>Less than High School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <description>Used by TPO, Capital Markets</description>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Email_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_SFDC2__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>old_Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax2__c</fullName>
        <label>Fax2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Financial_Advisor_Status__c</fullName>
        <description>Advisor: created per support ticket #66596</description>
        <label>Financial Advisor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Registration in Process</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Advisor_Type__c</fullName>
        <formula>Text( Account.Firm_Type__c )</formula>
        <inlineHelpText>The type is defined at the Account level.</inlineHelpText>
        <label>Financial Advisor Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_ARMS_ID_SFDC2__c</fullName>
        <description>Need the ARMS ID available for Advisor Firms and Advisors so that we can reference the ID for reporting.</description>
        <label>Firm ARMS ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender_SFDC2__c</fullName>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Business_Phone_Extension_SFDC2__c</fullName>
        <inlineHelpText>Extension used on Business Account&apos;s general business phone to reach Contact</inlineHelpText>
        <label>General Business Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>old_Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based Lender - General</fullName>
                </value>
                <value>
                    <fullName>Asset Based Lender - Healthcare</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Attorney - Healthcare</fullName>
                </value>
                <value>
                    <fullName>B-1 Visit if in City</fullName>
                </value>
                <value>
                    <fullName>B-2 Call Regularly</fullName>
                </value>
                <value>
                    <fullName>B-3 Unproductive</fullName>
                </value>
                <value>
                    <fullName>Bank - General</fullName>
                </value>
                <value>
                    <fullName>Bank - Healthcare Lender</fullName>
                </value>
                <value>
                    <fullName>Billing and Collections</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Lender - Healthcare</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>CPA - Healthcare</fullName>
                </value>
                <value>
                    <fullName>Expressed Financing Interest</fullName>
                </value>
                <value>
                    <fullName>Factor</fullName>
                </value>
                <value>
                    <fullName>Headhunter</fullName>
                </value>
                <value>
                    <fullName>Investment Banker</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Mezzanine Lender</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Real Estate - Healthcare</fullName>
                </value>
                <value>
                    <fullName>Sent a Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPL_Loan_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IPL: User lookup requested per support ticket #66762</description>
        <label>Loan Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_SFDC2__c</fullName>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$0 - $14,999</fullName>
                </value>
                <value>
                    <fullName>$15,000 - $19,999</fullName>
                </value>
                <value>
                    <fullName>$20,000 - $29,999</fullName>
                </value>
                <value>
                    <fullName>$30,000 - $39,999</fullName>
                </value>
                <value>
                    <fullName>$40,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $74,999</fullName>
                </value>
                <value>
                    <fullName>$75,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $124,999</fullName>
                </value>
                <value>
                    <fullName>$125,000 or More</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_License__c</fullName>
        <description>Does the Rep hold an Insurance License (Y/N)?</description>
        <label>Insurance License</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jitterbit_Dedupe_External_Id_SFDC2__c</fullName>
        <description>External ID for Jitterbit deduplication process</description>
        <externalId>true</externalId>
        <label>Jitterbit Dedupe External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Country_of_Citizenship__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s country of citizenship.</description>
        <label>Country of Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Is.</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Country_of_Residence__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s country of residence.</description>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Is.</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Drivers_License__c</fullName>
        <description>This field is optional and manually updated. This field functionality is tied to and extended functionality of this field is used in credit reporting. This field should be filled in if you are using the Credit Reporting extensions.</description>
        <label>Drivers License</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Email_Type__c</fullName>
        <description>This field is optional. The user manually populates this field. It describes the customer&apos;s type of email.</description>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Employer_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the primary employer for the account holder.</description>
        <inlineHelpText>The name of the primary employer for the account holder.</inlineHelpText>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>